# cannibalizer

./: CLAUDE.md  Cargo.toml  README.md
.claude-plugin/: plugin.json
.ctx/: HANDOFF.cnbl.cannibalizer.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml
skills/cannibalizer/: SKILL.md
skills/cannibalizer/references/: ecosystem-map.md
skills/classify/: SKILL.md
skills/cnbl/: SKILL.md
skills/cnbl/references/: ecosystem-map.md  hex-component-template.md
skills/cnbl/scripts/: scan.nu
skills/eat/: SKILL.md
skills/plan/: SKILL.md
skills/scan/: SKILL.md
specs/: classifier-hardening.md  discover.md
src/: classifier.rs  cli.rs  ecosystem.rs  main.rs  model.rs
src/cmd/: eat.rs  exec.rs  mod.rs  plan.rs  scaffold.rs  scan.rs
src/scanner/: mod.rs  parser.rs  walker.rs
tests/fixtures/: repos.json  sample.go  sample.py  sample.sh
