[package]
name = "cnbl"
version = "0.1.0"
edition = "2024"
description = "Absorb foreign repos into the Rust ecosystem"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
log = "0.4"
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-rust = "0.23"

[dev-dependencies]
tempfile = "3"
